interpreter: deprecate lang_args an and lang_link_args in project()
It's a trap, because it doesn't do what anyone wants, to put language
args in the project() default_options. The expectation is that these
will always be applied, what actually happens is that the environment
variable is not read, machine files are not read, and the options are
replaced if -D<lang>_args is passed on the command line. No one wants
this, they really want to use `add_project_aruments` or
`add_global_arguments`.

--- a/test cases/common/1 trivial/meson.build
+++ b/test cases/common/1 trivial/meson.build
@@ -2,8 +2,8 @@
 project('trivial test',
   # Comment inside a function call + array for language list
   ['c'],
-  default_options: {'buildtype': 'debug'},
-  meson_version : '>=0.52.0')
+  default_options: {'buildtype': 'debug', 'c_args': '-DFOO'},
+  meson_version : '>=1.0.0')
 #this is a comment
 sources = 'trivial.c'
 
