--- a/docs/meson.build
+++ b/docs/meson.build
@@ -2,19 +2,6 @@ project('Meson documentation', version: '1.0')
 
 cur_bdir = meson.current_build_dir()
 
-# Only the script knows which files are being generated
-docs_gen = custom_target(
-    'gen_docs',
-    input: files('markdown/index.md'),
-    output: 'gen_docs.stamp',
-    command: [
-        files('../tools/regenerate_docs.py'),
-        '--output-dir', cur_bdir,
-        '--dummy-output-file', '@OUTPUT@',
-    ],
-    build_by_default: true,
-    install: false)
-
 sitemap = files('sitemap.txt')
 
 yaml_loader = get_option('unsafe_yaml') ? 'fastyaml' : 'yaml'
@@ -32,6 +19,57 @@ refman_binary = custom_target(
         '--depfile', '@DEPFILE@',
         '--force-color',
     ]
+)
+
+refman_json = custom_target(
+    'gen_refman_json',
+    build_by_default: true,
+    input: refman_binary,
+    output: 'reference_manual.json',
+    command: [
+        genrefman,
+        '-l', 'pickle',
+        '-g', 'json',
+        '-i', '@INPUT@',
+        '-o', '@OUTPUT@',
+        '--force-color',
+    ],
+)
+test('validate_docs', find_program('./jsonvalidator.py'), args: [refman_json])
+
+refman_man = custom_target(
+    'gen_refman_man',
+    build_by_default: true,
+    input: refman_binary,
+    output: 'meson-reference.3',
+    command: [
+        genrefman,
+        '-l', 'pickle',
+        '-g', 'man',
+        '-i', '@INPUT@',
+        '-o', '@OUTPUT@',
+        '--force-color',
+        '--no-modules',
+    ],
+)
+
+# Everything past here is HTML resources.
+if not get_option('html')
+    subdir_done()
+endif
+
+# Only the script knows which files are being generated
+docs_gen = custom_target(
+    'gen_docs',
+    input: files('markdown/index.md'),
+    output: 'gen_docs.stamp',
+    command: [
+        files('../tools/regenerate_docs.py'),
+        '--output-dir', cur_bdir,
+        '--dummy-output-file', '@OUTPUT@',
+    ],
+    build_by_default: true,
+    install: false,
 )
 
 refman_md = custom_target(
@@ -52,37 +90,6 @@ refman_md = custom_target(
 )
 sitemap = refman_md[0]
 
-refman_json = custom_target(
-    'gen_refman_json',
-    build_by_default: true,
-    input: refman_binary,
-    output: 'reference_manual.json',
-    command: [
-        genrefman,
-        '-l', 'pickle',
-        '-g', 'json',
-        '-i', '@INPUT@',
-        '-o', '@OUTPUT@',
-        '--force-color',
-    ],
-)
-
-refman_man = custom_target(
-    'gen_refman_man',
-    build_by_default: true,
-    input: refman_binary,
-    output: 'meson-reference.3',
-    command: [
-        genrefman,
-        '-l', 'pickle',
-        '-g', 'man',
-        '-i', '@INPUT@',
-        '-o', '@OUTPUT@',
-        '--force-color',
-        '--no-modules',
-    ],
-)
-
 genrelnotes = custom_target(
     output: ['sitemap-genrelnotes.txt'],
     build_always_stale: true,
@@ -94,8 +101,6 @@ genrelnotes = custom_target(
     ]
 )
 sitemap = genrelnotes[0]
-
-test('validate_docs', find_program('./jsonvalidator.py'), args: [refman_json])
 
 hotdoc_prog = find_program('hotdoc', version: '>=0.13.7')
 
