docs: make the man page installable
Users now have the *option* to run the documentation build and use
`meson install` to install man pages.

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -51,6 +51,8 @@ refman_man = custom_target(
         '--force-color',
         '--no-modules',
     ],
+    install: true,
+    install_dir: get_option('mandir') / 'man3',
 )
 
 # Everything past here is HTML resources.
